# unfinishablemap

./: .env.example  .gitignore  CLAUDE.md  README.md  build.sh  netlify.toml  note-revising-site-ai-consciousness-views.md  pyproject.toml
.claude/: loop.md  settings.json  settings.local.json
.unfin/: current-queue-task.json  pending-triggers.json
hugo/: config.toml  kill
notes/: README.md  dualism-consequences.md  note-revising-site-ai-consciousness-views.md
obsidian/: index.md
scripts/: altered_state_symmetry_audit.py  anchoring_audit.py  archive_workflow.py  build.py  check_model_fallback.py  check_research_consumed.py  check_slug.py  check_tenet_violations.py  collect_chatgpt_review.py  collect_review.py  commit_obsidian.py  convert_site_terminology.py  deep_review.py  embed_videos.py  empirical_currency_scan.py  evolve_loop.py  fix_changelog_timestamps.py  harvest_research_subjects.py  highlights.py  manual_tenet_check.py  normalize_review_links.py  sync.py  validate.py
tests/: test_altered_state_symmetry.py  test_anchoring.py  test_archive_pending_reviews.py  test_empirical_currency.py  test_research_match.py  test_telegram_handler.py
tmp/: collect-chatgpt-body-2026-05-14.md  collect-chatgpt-body-2026-05-22.md  collect-chatgpt-prompt-2026-05-14.txt  collect-claude-body-2026-05-08.md  collect-claude-body-2026-05-11.md  collect-claude-body-2026-05-12.md  collect-claude-body-2026-05-14.md  collect-claude-body-2026-05-16.md  collect-claude-body-2026-05-22.md  collect-claude-body-2026-05-26.md  collect-claude-body-2026-05-27.md  collect-claude-body-2026-05-29.md  collect-claude-body-2026-06-01.md  collect-claude-body-2026-06-03.md  collect-claude-body-2026-06-05.md  collect-claude-body-2026-06-08.md  collect-claude-body-2026-07-15.md  collect-claude-body-2026-07-16.md  collect-claude-body-2026-07-17.md  collect-claude-body-2026-07-18.md  collect-claude-body-2026-07-19.md  collect-claude-body-2026-07-20.md  collect-claude-body-2026-07-21.md  collect-claude-prompt-2026-05-11.txt  collect-claude-prompt-2026-05-12.txt  collect-claude-prompt-2026-05-14.txt  collect-claude-prompt-2026-05-26.txt  collect-claude-prompt-2026-05-27.txt  collect-claude-prompt-2026-07-16.txt  (+25 more)
(+18660 files in other folders)
